--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -19,10 +19,10 @@ nav {
 
 
 #register {
-    width: 50%;
-    height: 800px;
+    width: 1000px;
+    height: 100%;
 
-    margin-left: 500px;
+    margin: 20px auto 0;
 }
 
 .row {
@@ -43,7 +43,7 @@ input {
     margin-bottom: 30px; 
 }
 
-#create {
+#create-account {
     width: 50%;
     height: 50px;
     font-size: 20px;
@@ -56,20 +56,20 @@ input {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
-    /* display: none; */
-    
+    display: none;
+    margin: 20px auto 0;
 
 }
 
-#popupBody {
+#popup-body {
     position: fixed;
     width: 800px;
     height: 400px;
     border: 2px solid black;
     border-radius: 5px;
     background-color: white;
-    left: 28%;
-    top: 15%;
+    left: 25%;
+    top: 25%;
     border-radius: 30px;
 }
 
