--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -25,26 +25,28 @@ nav {
     margin: 20px auto 0;
 }
 
-.row {
+.required-inputs {
     display: flex;
-    margin-top: 30px;
 }
 
-.column {
+.required-inputs {
     display: flex;
-    flex-direction: column;
-    margin-right: 50px; 
+    gap: 40px;
+}
+
+label {
+    display: block;
 }
 
 input {
-    width: 450px; 
-    padding: 10px; 
+    width: 450px;
+    padding: 10px;
     box-sizing: border-box;
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
 }
 
 #create-account {
-    width: 50%;
+    width: 450px;
     height: 50px;
     font-size: 20px;
 }
