--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -45,7 +45,7 @@ input {
     margin-bottom: 30px;
 }
 
-#create-account {
+#register-btn {
     width: 450px;
     height: 50px;
     font-size: 20px;
