--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -51,6 +51,10 @@ input {
     font-size: 20px;
 }
 
+#login-error, #register-error{
+    color: red;
+}
+
 #popup {
     position: fixed;
     top: 0;
@@ -62,6 +66,7 @@ input {
     margin: 20px auto 0;
 
 }
+
 
 #popup-body {
     position: fixed;
@@ -89,3 +94,4 @@ input {
 button:hover {
     cursor: pointer;
 }
+
