--- a/public/src/css/account.css
+++ b/public/src/css/account.css
@@ -1,5 +1,5 @@
 /*
- *
+ * 
  */
 
  body {
@@ -7,8 +7,13 @@
     padding: 0;
 }
 
+#profile-view {
+    width: 1000px;
+    height: 1000px;
+    margin: 20px auto 0;
+    display: flex;
+}
 
-/* temp nav */
 nav {
     /* copy chris nav styling here */
     background-color: #555;
@@ -17,32 +22,18 @@ nav {
     justify-content: right;
 }
 
-#profile-view {
-    width: 1000px;
-    height: 1000px;
-    /* border: 10px solid red; */
-    /* border-radius: 50px; */
-    margin: 20px auto 0;
-    /* overflow: hidden; */
-    display: flex;
+#profile-card, #options {
+    width: 220px;
+    background-color: teal;
+    border-radius: 20px;
 }
 
 #profile-card {
-    width: 220px;
     height: 120px;
-    background-color: teal;
-    border-radius: 20px;
-    /* display: flex; */
-    /* flex-direction: column;
-    justify-content: center; */
 }
 
-#options { 
-    width: 220px;
+#options {
     margin-top: 20px;
-    
-    background-color: teal;
-    border-radius: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -57,11 +48,12 @@ nav {
 .options:hover {
     cursor: pointer;
 }
+
 .profile-display {
-    margin:35px
+    margin: 35px;
 }
+
 #info-display {
-    /* position: fixed; */
     margin-left: 20px;
     width: 700px;
     height: 800px;
@@ -71,19 +63,15 @@ nav {
 }
 
 .display-body {
-    /* margin: 60px; */
-    /* margin-top: 0; */
     width: 620px;
     height: 720px;
-    /* border: solid black; */
 }
 
 #info {
-    /* border: solid black; */
     width: 624px;
     height: 150px;
-    
 }
+
 #profile-card-body {
     padding-top: 10px;
     padding-left: 10px;
@@ -95,7 +83,6 @@ nav {
     flex-wrap: wrap;
     width: 620px;
     height: 650px;
-    /* background-color: #f0f0f0; */
     border: 5px solid black;
     overflow-y: auto;
 }
@@ -103,48 +90,19 @@ nav {
 #details {
     display: flex;
     flex-wrap: wrap;
-    /* padding: 10px; */
-    /* padding-top: 0px; */
     gap: 100px;
-    /* justify-content: space-between; */
 }
 
-h3 {
-    margin-bottom: 0px;
-    font-size:x-large;
-}
-
-h4 {
+h3, h4 {
     margin-bottom: 0;
 }
+
 p {
     margin-top: 0;
 }
 
-
-#overview .profile-display, #overview-btn.active {
-    display: block;
-}
-
-#profile .profile-display, #profile-btn.active {
-    display: block;
-}
-
-#reservations .profile-display, #reservations-btn.active {
-    display: block;
-}
-
-#payment .profile-display, #payment-btn.active {
-    display: block;
-}
-
-#settings .profile-display, #settings-btn.active {
-    display: block;
-}
-
-#upcoming .reservation-display, #settings-btn.active {
-    display: block;
-}
-#previous .reservation-display, #settings-btn.active {
+#overview .profile-display, #profile .profile-display, #reservations .profile-display, #payment .profile-display,
+#settings .profile-display, #upcoming .reservation-display, #previous .reservation-display, #overview-btn.active,
+#profile-btn.active, #reservations-btn.active,#payment-btn.active, #settings-btn.active {
     display: block;
 }
