--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -141,7 +141,7 @@ nav li a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 400px;
+    width: 500px;
     border-bottom: #595959 1px solid;
 }
 
@@ -717,7 +717,10 @@ hr {
 .room-type-list {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
+    width: 215px;
+    margin-left: 75px;
+    text-align: left;
 }
 
 .room-rate-tile {
@@ -730,7 +733,9 @@ hr {
 .room-rate-list {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
+    width: 215px;
+    text-align: left;
 }
 
 #num-results {
@@ -931,6 +936,22 @@ hr {
 
 #submit-msg, #login-msg {
     padding-bottom: 40px;
+}
+
+#filter-msg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #969696;
+    font-size: 20px;
+    text-align: center;
+    box-shadow: black 0 0 10px;
+    width: 60%;
+    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px 40px 0;
+    margin-top: 0;
 }
 
 .hidden {
