added header documentation

--- a/public/src/css/account.css
+++ b/public/src/css/account.css
@@ -1,5 +1,7 @@
-/*
- * 
+/* Derrek
+ * account.css
+ * Style sheet for the account.html page, helps with positioning and displays of various information
+ * Additionally includes styling from Chris to format the nav bar he created and designed
  */
 body {
     margin: 0;
