--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -1,6 +1,8 @@
-/*
-*
-*/
+/* Derrek Do
+ * login.css
+ * Style sheet for the login page helps keeps positioning on the prompts and popups to stay centered
+ * Additionally includes styling for the nav bar Chris designed
+ */
 
 /* body {
     margin: 0;
