--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -219,7 +219,8 @@ input {
 }
 
 #login-error, #register-error {
-    color: red;
+    color: #d7be8a;
+    margin-top: -5px;
 }
 
 #popup {
@@ -237,8 +238,9 @@ input {
     position: fixed;
     width: 800px;
     height: 400px;
-    border: 2px solid black;
-    background-color: white;
+    border: #545454 1px solid;
+    background-color: #171717;
+    box-shadow: #343434 0 0 10px;
     left: 28%;
     top: 25%;
     border-radius: 30px;
@@ -248,14 +250,20 @@ input {
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    color:black;
+    color: #d7be8a;
 }
 
 #sign-in-button {
     width: 20%;
     height: 30px;
+    color: black;
+    font-weight: bolder;
 }
 
 button:hover {
     cursor: pointer;
+}
+
+#sign-in-redirect {
+    color: white;
 }
